# DESAN

./: .gitignore  CMakeLists.txt  Makefile  README.md  alias_analysis.py  analysis_utils.py  compiler.py  dependency.py  pipeline.py  redundancy.py  sanitizer.py  strategy.py  utils.py
git/: readme.md
include/DESAN/: CheckGraphBuilder.h  CheckSliceRemover.h  CheckedVariableAnalyzer.h  LLMAssistedAnalyzer.h  RedundantCheckEliminator.h  SanitizerCheckCollector.h
lib/: CheckGraphBuilder.cpp  CheckSliceRemover.cpp  CheckedVariableAnalyzer.cpp  DESANPass.cpp  LLMAssistedAnalyzer.cpp  RedundantCheckEliminator.cpp  SanitizerCheckCollector.cpp
motivating_example/: readme.md  treeup.c  treeup.ll
results/: README.md
results/asanmm-comparison/: oss-asanmm-after-check-elimination-results.csv  oss-asanmm-after-check-elimination-results.md  oss-asanmm-after-check-elimination-status.csv  spec-cpu2006-asanmm-after-check-elimination-summary.csv  spec-cpu2006-asanmm-after-check-elimination-summary.md  spec-cpu2017-asanmm-after-check-elimination-summary.csv  spec-cpu2017-asanmm-after-check-elimination-summary.md
results/desan/: all-after-read-check-elimination-results.csv
results/desan/oss/: bzip2-asan-after-read-check-elimination-summary.csv  bzip2-asan-after-read-check-elimination-summary.md  (+118 more)
results/sanrazor-comparison/: spec-cpu2006-sanrazor-ubsan-L0-detected-disabled-summary.csv  spec-cpu2006-sanrazor-ubsan-L0-reported-summary.csv  spec-cpu2006-sanrazor-ubsan-L0-reported-summary.md  spec-cpu2006-sanrazor-ubsan-L0-summary.md  spec-cpu2006-sanrazor-ubsan-L1-detected-disabled-summary.md  spec-cpu2006-sanrazor-ubsan-L1-reported-summary.csv  spec-cpu2006-sanrazor-ubsan-L1-reported-summary.md  spec-cpu2006-sanrazor-ubsan-L1-summary.csv  spec-cpu2006-sanrazor-ubsan-L2-removed-access-summary.csv  spec-cpu2006-sanrazor-ubsan-L2-removed-access-summary.md  spec-cpu2006-sanrazor-ubsan-L2-reported-summary.csv  spec-cpu2006-sanrazor-ubsan-L2-reported-summary.md  spec-cpu2006-sanrazor-ubsan-L2-summary.csv  spec-cpu2006-sanrazor-ubsan-L2-summary.md  spec-cpu2006-sanrazor-ubsan-removed-access-summary.csv  spec-cpu2006-sanrazor-ubsan-removed-access-summary.md
scripts/: apply_sanrazor_detected_disabled_counts.py  build.sh  collect_all_results.py  collect_oss_all_results.sh  collect_oss_batch_results.py  common.sh  compile_asan.sh  compile_msan.sh  compile_ubsan.sh  count_sanitizer_checks.py  evaluate.sh  opensource_asanmm_summary.py  opensource_summary.py  run_cpu2006_asan_after_read_check_elimination.sh  run_cpu2006_asanmm_comparison.sh  run_cpu2006_msan_after_read_check_elimination.sh  run_cpu2006_sanrazor_ubsan_comparison.sh  run_cpu2006_ubsan_after_read_check_elimination.sh  run_cpu2017_asan_after_read_check_elimination.sh  run_cpu2017_asanmm_comparison.sh  run_cpu2017_msan_after_read_check_elimination.sh  run_cpu2017_ubsan_after_read_check_elimination.sh  run_git_asan_after_read_check_elimination.sh  run_git_msan_after_read_check_elimination.sh  run_git_ubsan_after_read_check_elimination.sh  run_openssl_asan_after_read_check_elimination.sh  run_openssl_msan_after_read_check_elimination.sh  run_openssl_ubsan_after_read_check_elimination.sh  run_oss_asanmm_comparison.py  run_oss_batch_after_read_check_elimination.py  run_oss_extra50_shards.sh  run_oss_rerun_final.sh  run_oss_rerun_final4.sh  run_oss_rerun_fixes.sh  run_pass.sh  sanrazor_removed_access_summary.py  spec_asan_summary.py  spec_asanmm_summary.py  spec_desan_cc.sh  spec_desan_common.sh  (+3 more)
spec_configs/: cpu2006-desan.cfg  cpu2017-desan.cfg
test/inputs/: eval_manifest.txt  pipeline_sample.c  sanitizer_bug.c  sanitizer_checks.ll
